[gd_scene load_steps=10 format=3 uid="uid://hsfseme0taar"]

[ext_resource type="Script" uid="uid://cxq15thre71pj" path="res://sidebar.gd" id="1_1nfj0"]
[ext_resource type="Texture2D" uid="uid://b4betlsffwmsy" path="res://Assets/curryIcon.png" id="2_thefd"]
[ext_resource type="Texture2D" uid="uid://bs7mxxwi8yv21" path="res://Assets/cookIcon.png" id="3_hpwuh"]
[ext_resource type="Texture2D" uid="uid://by3dxqtbhip8s" path="res://Assets/rollIcon.png" id="4_c1lln"]
[ext_resource type="Texture2D" uid="uid://3ofo64cc3pbo" path="res://orderIcon.png" id="5_ysgnd"]

[sub_resource type="CanvasTexture" id="CanvasTexture_lu6np"]

[sub_resource type="CanvasTexture" id="CanvasTexture_thefd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uwvo2"]
size = Vector2(223, 332)

[sub_resource type="CanvasTexture" id="CanvasTexture_hpwuh"]

[node name="sidebar" type="Node2D"]
z_index = 25
script = ExtResource("1_1nfj0")

[node name="curryButton" type="Button" parent="."]
offset_left = 1076.0
offset_top = 13.0
offset_right = 1138.0
offset_bottom = 76.0
scale = Vector2(0.048, 0.048)
icon = ExtResource("2_thefd")
metadata/_edit_use_anchors_ = true

[node name="cookButton" type="Button" parent="."]
offset_left = 1004.0
offset_top = 13.0
offset_right = 1066.0
offset_bottom = 76.0
scale = Vector2(0.048, 0.048)
icon = ExtResource("3_hpwuh")
metadata/_edit_use_anchors_ = true

[node name="rollButton" type="Button" parent="."]
offset_left = 932.0
offset_top = 13.0
offset_right = 994.0
offset_bottom = 76.0
scale = Vector2(0.048, 0.048)
icon = ExtResource("4_c1lln")
metadata/_edit_use_anchors_ = true

[node name="orderButton" type="Button" parent="."]
offset_left = 860.0
offset_top = 12.0
offset_right = 922.0
offset_bottom = 75.0
scale = Vector2(0.048, 0.048)
icon = ExtResource("5_ysgnd")
metadata/_edit_use_anchors_ = true

[node name="pauseButton" type="Button" parent="."]
offset_left = 954.0
offset_top = 601.0
offset_right = 1067.0
offset_bottom = 632.0
text = "PAUSE"
metadata/_edit_use_anchors_ = true

[node name="sideBox2" type="Sprite2D" parent="."]
modulate = Color(0.219501, 0.219501, 0.219501, 1)
z_index = -5
position = Vector2(1011, 370.568)
scale = Vector2(-282.818, 551.227)
texture = SubResource("CanvasTexture_lu6np")

[node name="Sprite2D3" type="Sprite2D" parent="."]
modulate = Color(0.219501, 0.219501, 0.219501, 1)
z_index = -5
position = Vector2(968.727, 48.2955)
scale = Vector2(-367.364, 95.7728)
texture = SubResource("CanvasTexture_lu6np")

[node name="topLine" type="Sprite2D" parent="."]
modulate = Color(0.172833, 0.172833, 0.172833, 1)
z_index = -5
position = Vector2(394.227, 14.7955)
scale = Vector2(-788.364, 6.7728)
texture = SubResource("CanvasTexture_thefd")

[node name="steps2" type="Sprite2D" parent="."]
modulate = Color(0.355314, 0.355314, 0.355313, 1)
z_index = -5
position = Vector2(1009.43, 122.546)
scale = Vector2(-246.364, 30.8728)
texture = SubResource("CanvasTexture_lu6np")

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2(968.727, 48.2955)
rotation = 3.14159
scale = Vector2(367.364, -95.7728)

[node name="Sprite2D3" type="Sprite2D" parent="Area2D2"]
modulate = Color(0.18359, 0.18359, 0.18359, 1)
z_index = -4
position = Vector2(-0.11528, 2.84267)
scale = Vector2(0.613735, 3.46939)
texture = SubResource("CanvasTexture_lu6np")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(-0.11371, 2.82653)
rotation = -3.14159
scale = Vector2(0.0027221, -0.0104414)
shape = SubResource("RectangleShape2D_uwvo2")
debug_color = Color(0, 0, 0, 0.192157)

[node name="help" type="Label" parent="."]
offset_left = 885.0
offset_top = 111.0
offset_right = 1133.0
offset_bottom = 137.0
text = "..."
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="dragTicketLabel2" type="Label" parent="."]
offset_left = 902.0
offset_top = 148.0
offset_right = 1123.0
offset_bottom = 489.0
theme_override_colors/font_color = Color(0.553449, 0.564867, 0.553767, 1)
theme_override_constants/line_spacing = -5
theme_override_font_sizes/font_size = 27
text = "VIEW
TICKET
HERE"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="."]
offset_left = 5.0
offset_top = 26.0
offset_right = 58.0
offset_bottom = 57.0
text = "Menu"

[node name="Button2" type="Button" parent="."]
offset_left = 11.0
offset_top = 67.0
offset_right = 55.0
offset_bottom = 98.0
toggle_mode = true
text = "Help"

[node name="Area2D" type="Area2D" parent="."]

[node name="instructions" type="RichTextLabel" parent="Area2D"]
show_behind_parent = true
z_index = 11
offset_left = 17.0
offset_top = 103.0
offset_right = 849.0
offset_bottom = 251.0
text = "ORDER: select \"take order\" when a customer is present.
ROLL: select dough type and \"spawn dough\" to create dough ball. Press right arrow on keyboard to roll dough.
COOK: Remove item from pan at correct time for points
CURRY: select a type of curry, press space bar to drop it into the bowl. The closer the ladle is to green, the more points you will recieve!"

[node name="Sprite2D" type="Sprite2D" parent="Area2D"]
modulate = Color(0.400698, 0.400698, 0.400698, 1)
z_index = 10
position = Vector2(431.921, 178.226)
scale = Vector2(-833.714, 160.438)
texture = SubResource("CanvasTexture_hpwuh")

[connection signal="pressed" from="curryButton" to="." method="_on_curry_button_pressed"]
[connection signal="pressed" from="cookButton" to="." method="_on_cook_button_pressed"]
[connection signal="pressed" from="rollButton" to="." method="_on_roll_button_pressed"]
[connection signal="pressed" from="orderButton" to="." method="_on_order_button_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="toggled" from="Button2" to="." method="_on_button_2_toggled"]
